--- a/index.html
+++ b/index.html
@@ -1,4 +1,44 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-  <body></body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Photo Gallery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <header>
+        <h1>Photo Gallery</h1>
+        <p>Explore the collection of beautiful images.</p>
+    </header>
+
+    <section class="gallery">
+        <div class="gallery-item">
+            <img src="image1.jpg" alt="Gallery Image 1">
+            <div class="gallery-item-info">
+                <h3>Image Title 1</h3>
+                <p>Description of the image.</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="image2.jpg" alt="Gallery Image 2">
+            <div class="gallery-item-info">
+                <h3>Image Title 2</h3>
+                <p>Description of the image.</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="image3.jpg" alt="Gallery Image 3">
+            <div class="gallery-item-info">
+                <h3>Image Title 3</h3>
+                <p>Description of the image.</p>
+            </div>
+        </div>
+        <!-- Add more gallery items as needed -->
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Photo Gallery. All rights reserved.</p>
+    </footer>
+</body>
+</html>
