--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="gallery-item-info">
                 <h3>Image Title 1</h3>
                 <p>Description of the image.</p>
+                <button>View Details</button>
             </div>
         </div>
         <div class="gallery-item">
@@ -25,6 +26,7 @@
             <div class="gallery-item-info">
                 <h3>Image Title 2</h3>
                 <p>Description of the image.</p>
+                <button>View Details</button>
             </div>
         </div>
         <div class="gallery-item">
@@ -32,13 +34,14 @@
             <div class="gallery-item-info">
                 <h3>Image Title 3</h3>
                 <p>Description of the image.</p>
+                <button>View Details</button>
             </div>
         </div>
         <!-- Add more gallery items as needed -->
     </section>
 
     <footer>
-        <p>&copy; 2024 Photo Gallery. All rights reserved.</p>
+        <p>&copy; 2024 Daniel Hakeem. All rights reserved. Website made by ChatGPT.</p>
     </footer>
 </body>
 </html>
