--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Gallery</title>
+    <title>Made by AI.</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Photo Gallery</h1>
-        <p>Explore the collection of beautiful images.</p>
+        <h1>Copilot x ChatGPT</h1>
+        <p>Explore the collection of AI-generated projects.</p>
     </header>
 
     <section class="gallery">
         <div class="gallery-item">
             <img src="image1.jpg" alt="Gallery Image 1">
             <div class="gallery-item-info">
-                <h3>Image Title 1</h3>
-                <p>Description of the image.</p>
-                <button>View Details</button>
+                <h3>ChatGPT WPF</h3>
+                <p>Windows Presentation Foundation project.</p>
+                <button>Download</button>
             </div>
         </div>
         <div class="gallery-item">
             <img src="image2.jpg" alt="Gallery Image 2">
             <div class="gallery-item-info">
-                <h3>Image Title 2</h3>
-                <p>Description of the image.</p>
-                <button>View Details</button>
+                <h3>Copilot WPF</h3>
+                <p>Windows Presentation Foundation project.</p>
+                <button>Download</button>
             </div>
         </div>
         <div class="gallery-item">
             <img src="image3.jpg" alt="Gallery Image 3">
             <div class="gallery-item-info">
-                <h3>Image Title 3</h3>
-                <p>Description of the image.</p>
-                <button>View Details</button>
+                <h3>ChatGPT x Copilot WinForms Music Player</h3>
+                <p>Windows Forms .NET project.</p>
+                <button>Download</button>
             </div>
         </div>
         <!-- Add more gallery items as needed -->
