--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
             </div>
         </div>
         <!-- Add more gallery items as needed -->
+        <div class="gallery-item">
+            <img src="image3.jpg" alt="Gallery Image 3">
+            <div class="gallery-item-info">
+                <h3>Image Title 3</h3>
+                <p>Description of the image.</p>
+                <button>View Details</button>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="image3.jpg" alt="Gallery Image 3">
+            <div class="gallery-item-info">
+                <h3>Image Title 3</h3>
+                <p>Description of the image.</p>
+                <button>View Details</button>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="image3.jpg" alt="Gallery Image 3">
+            <div class="gallery-item-info">
+                <h3>Image Title 3</h3>
+                <p>Description of the image.</p>
+                <button>View Details</button>
+            </div>
+        </div>
     </section>
 
     <footer>
