--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="gallery-item">
             <img src="image1.jpg" alt="Gallery Image 1">
             <div class="gallery-item-info">
-                <h3>ChatGPT WPF</h3>
+                <h3>ChatGPT</h3>
                 <p>Windows Presentation Foundation project.</p>
                 <button>Download</button>
             </div>
@@ -24,7 +24,7 @@
         <div class="gallery-item">
             <img src="image2.jpg" alt="Gallery Image 2">
             <div class="gallery-item-info">
-                <h3>Copilot WPF</h3>
+                <h3>Copilot</h3>
                 <p>Windows Presentation Foundation project.</p>
                 <button>Download</button>
             </div>
@@ -32,8 +32,8 @@
         <div class="gallery-item">
             <img src="image3.jpg" alt="Gallery Image 3">
             <div class="gallery-item-info">
-                <h3>ChatGPT x Copilot WinForms Music Player</h3>
-                <p>Windows Forms .NET project.</p>
+                <h3>ChatGPT x Copilot</h3>
+                <p>Windows Forms .NET music player project.</p>
                 <button>Download</button>
             </div>
         </div>
